--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,65 @@
+body {
+    background-color: antiquewhite;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+
 footer {
     background-color: rgba(238, 191, 161, 0.58);
     text-align: center;
-    font-size: 20px;
+    font-size: 18px;
     font-weight: bold;
     color: #000000;
 }
 
-.info {
+.main__skills {
+    font-weight: bold;
+}
+
+.main__skills__list {
+    font-weight: normal;
+}
+
+.main__education {
+    font-weight: bold;
+}
+
+.main__education__list {
+    font-weight: normal;
+}
+
+.main__experience {
+    font-weight: bold;
+}
+
+.main__experience__list {
+    font-weight: normal;
+}
+
+.main__competitions {
+    font-weight: bold;
+}
+
+.main__competitions__list {
+    font-weight: normal;
+}
+
+.head__info {
     background-color:  rgba(238, 191, 161, 0.58);
     font-size: 14px;
     font-weight: bold;
     color: #000000;
+    text-align: center;
 }
 
-.info__image {
-    display:block;
-    margin:auto;
+.head__info__image {
+    display:inline-block;
+    /*margin:auto;*/
     width: 250px;
-    border-radius: 10px;  /* Скругление углов изображения */
-    border: 5px solid #fff; /* Цвет и ширину рамки */
-    box-shadow: 2px 1px 5px #999999; /* Цвет и размер тени */
-    float: right; /* Выравниваем по правому краю  */
-    margin: 10px 0 10px 10px; /* Настраиваем отступы вокруг картинки */
+    border-radius: 10px;
+    border: 5px solid #fff;
+    box-shadow: 2px 1px 5px #999999;
+    float: right;
+    margin: 10px 0 10px 10px;
 }
