--- a/css/style.css
+++ b/css/style.css
@@ -1,53 +1,14 @@
 body {
-    background-color: antiquewhite;
+    background-color: #f5e0c6;
     margin-left: auto;
     margin-right: auto;
     width: 50%;
 }
 
-footer {
-    background-color: rgba(238, 191, 161, 0.58);
-    text-align: center;
-    font-size: 18px;
-    font-weight: bold;
-    color: #000000;
-}
-
-.main__skills {
-    font-weight: bold;
-}
-
-.main__skills__list {
-    font-weight: normal;
-}
-
-.main__education {
-    font-weight: bold;
-}
-
-.main__education__list {
-    font-weight: normal;
-}
-
-.main__experience {
-    font-weight: bold;
-}
-
-.main__experience__list {
-    font-weight: normal;
-}
-
-.main__competitions {
-    font-weight: bold;
-}
-
-.main__competitions__list {
-    font-weight: normal;
-}
-
 .head__info {
-    background-color:  rgba(238, 191, 161, 0.58);
-    font-size: 14px;
+    background-color:  rgb(238, 191, 161);
+    font-size: 26px;
+    border-radius: 10px;
     font-weight: bold;
     color: #000000;
     text-align: center;
@@ -55,11 +16,69 @@ footer {
 
 .head__info__image {
     display:inline-block;
-    /*margin:auto;*/
     width: 250px;
     border-radius: 10px;
-    border: 5px solid #fff;
+    border: 5px solid #e3ac8d;
     box-shadow: 2px 1px 5px #999999;
     float: right;
     margin: 10px 0 10px 10px;
 }
+
+.about-me {
+    font-size: 17px;
+}
+
+.main__skills {
+    font-size: 17px;
+    font-weight: bold;
+}
+
+.main__skills__list {
+    font-size: 17px;
+    font-weight: normal;
+}
+
+.main__education {
+    font-size: 17px;
+    font-weight: bold;
+}
+
+.main__education__list {
+    font-size: 17px;
+    font-weight: normal;
+}
+
+.main__experience {
+    font-size: 17px;
+    font-weight: bold;
+}
+
+.main__experience__list {
+    font-weight: normal;
+}
+
+code {
+    font-size: 14px;
+}
+
+.main__competitions {
+    font-size: 17px;
+    font-weight: bold;
+}
+
+.main__competitions__list {
+    font-size: 17px;
+    font-weight: normal;
+}
+
+footer {
+    background-color: rgb(238, 191, 161);
+    border-radius: 10px;
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    color: #000000;
+}
+
+
+
