--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,10 @@
 body {
-    background-color: #f5e0c6;
+    background-color: #f6e7d5;
     margin-left: auto;
     margin-right: auto;
     width: 50%;
+    font-family: Georgia, serif;
+    color: black;
 }
 
 .head__info {
@@ -10,7 +12,6 @@ body {
     font-size: 26px;
     border-radius: 10px;
     font-weight: bold;
-    color: #000000;
     text-align: center;
 }
 
@@ -77,7 +78,26 @@ footer {
     text-align: center;
     font-size: 20px;
     font-weight: bold;
-    color: #000000;
+    height: 75px;
+}
+
+a {
+    background-color: #e3a686;
+    border-radius: 10px;
+    color: black;
+    padding: 5px 10px;
+    font-size: 18px;
+    text-decoration: none;
+}
+
+a:hover {
+    background-color: #f5e0c6;
+    cursor: pointer;
+}
+
+a:active {
+    box-shadow: none;
+    top: 5px;
 }
 
 
