code: added table and implemented flex

--- a/css/style.css
+++ b/css/style.css
@@ -1,56 +1,85 @@
 body {
+    display: flex;
+    flex-direction: column;
     background-color: #f6e7d5;
-    margin-left: auto;
-    margin-right: auto;
     width: 50%;
+    margin: 0 25% 0;
     font-family: Georgia, serif;
+    font-size: 1rem;
     color: black;
 }
 
 .head__info {
+    display: flex;
+    flex-direction: column;
     background-color:  rgb(238, 191, 161);
-    font-size: 26px;
+    font-size: 1.725rem;
     border-radius: 10px;
     font-weight: bold;
     text-align: center;
+    padding: 1%;
+    margin: 3vh 0 3vh;
 }
 
-.head__info__image {
-    display:inline-block;
-    width: 250px;
+
+.about-me {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.about-me__image {
+    align-self: center;
+    justify-self: center;
+    order: 2;
+    width: 20vw;
+    height: 100%;
     border-radius: 10px;
     border: 5px solid #e3ac8d;
     box-shadow: 2px 1px 5px #999999;
-    float: right;
-    margin: 10px 0 10px 10px;
+    margin-right: 5%;
 }
 
-.about-me {
-    font-size: 17px;
+.about-me__motivation{
+    order: 1;
+    width: 35%;
+    margin-top: 7vh;
+}
+
+.about-me__quote{
+    order: 3;
+    margin-top: 2vh;
+}
+
+.about-me__story{
+    order: 4;
+    margin-top: 2vh;
+}
+
+main{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .main__skills {
-    font-size: 17px;
     font-weight: bold;
 }
 
 .main__skills__list {
-    font-size: 17px;
     font-weight: normal;
 }
 
 .main__education {
-    font-size: 17px;
     font-weight: bold;
 }
 
 .main__education__list {
-    font-size: 17px;
     font-weight: normal;
 }
 
 .main__experience {
-    font-size: 17px;
     font-weight: bold;
 }
 
@@ -58,27 +87,90 @@ body {
     font-weight: normal;
 }
 
-code {
-    font-size: 14px;
+.main__experience__algorithm{
+    font-size: 0.875rem;
+}
+
+
+
+.main__table__header{
+    font-size: 1.2rem;
+    font-weight: bold;
+    margin-left: 40%;
+    margin-top: 4vh;
+}
+
+.main__table{
+    display: grid;
+    justify-self: center;
+    grid-template-columns: minmax(100px, 400px) minmax(150px, 400px) minmax(150px, 400px);
+    grid-template-rows: 50px 50px 50px 50px 50px 50px;
+    max-width: 1200px;
+    min-width: 400px;
+    margin-top: 1vh;
+}
+
+thead,
+tbody,
+tr {
+    display: contents;
+}
+
+th,
+td {
+    padding: 15px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+th {
+    position: sticky;
+    top: 0;
+    background: #e3a686;
+    text-align: left;
+    font-weight: 600;
+    font-size: 1.3rem;
+    color: #000000;
+}
+
+th:last-child {
+    border: 0;
+}
+
+td {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    color: #000000;
+    background: #eebfa1;
+}
+
+tr:nth-child(even) td {
+    background: #e3ac8d;
 }
 
 .main__competitions {
-    font-size: 17px;
+    margin-top: 5vh;
     font-weight: bold;
 }
 
 .main__competitions__list {
-    font-size: 17px;
     font-weight: normal;
 }
 
 footer {
+    display: flex;
+    flex-direction: column;
     background-color: rgb(238, 191, 161);
     border-radius: 10px;
     text-align: center;
-    font-size: 20px;
+    font-size: 1.25rem;
     font-weight: bold;
     height: 75px;
+}
+
+.footer__contacts-list{
+    margin-top: 2vh;
 }
 
 a {
@@ -86,7 +178,7 @@ a {
     border-radius: 10px;
     color: black;
     padding: 5px 10px;
-    font-size: 18px;
+    font-size: calc( (100vw - 480px)/(1500 - 480) * (17 - 8) + 8px);
     text-decoration: none;
 }
 
@@ -100,5 +192,52 @@ a:active {
     top: 5px;
 }
 
+@media screen and (max-width: 1000px){
+    .main__experience__algorithm{
+        display: none;
+    }
+}
 
+@media screen and (max-width: 975px){
 
+    .footer__contacts-list{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .footer__contacts__button{
+        font-size: 0.8rem;
+        width: 30vw;
+        align-self: center;
+
+    }
+
+    footer{
+        height: 35vh;
+    }
+
+    .about-me__image{
+        order: 1;
+        width: 33vw;
+        height: 100%;
+        margin-right: 5vw;
+    }
+
+    .about-me__motivation{
+        width: 100%;
+    }
+
+    .about-me__quote{
+        margin-left: 10%;
+    }
+}
+
+@media screen and (max-width: 600px){
+    .main__table{
+        display: none;
+    }
+
+    .main__table__header{
+        display: none;
+    }
+}
