code: added second html and css files

--- a/css/home_style.css
+++ b/css/home_style.css
@@ -18,9 +18,33 @@ body {
     font-weight: bold;
     text-align: center;
     padding: 1%;
-    margin: 3vh 0 3vh;
+    margin: 3vh 0 1vh;
 }
 
+.navigation {
+    display: flex;
+    flex-direction: row;
+    font-size: 1.725rem;
+    border-radius: 10px;
+    font-weight: bold;
+    text-align: center;
+    margin: 1vh 0 1vh;
+    justify-content: left;
+}
+
+.navigation__projects {
+    border-radius: 10px;
+    color: black;
+    font-size: calc( (100vw - 480px)/(1500 - 480) * (17 - 8) + 8px);
+    text-decoration: none;
+    background-color:  rgb(238, 191, 161);
+    padding: 2%;
+}
+
+.navigation__projects:hover {
+    background-color: #e3a686;
+    cursor: pointer;
+}
 
 .about-me {
     display: flex;
@@ -90,8 +114,6 @@ main{
 .main__experience__algorithm{
     font-size: 0.875rem;
 }
-
-
 
 .main__table__header{
     font-size: 1.2rem;
@@ -167,13 +189,14 @@ footer {
     font-size: 1.25rem;
     font-weight: bold;
     height: 75px;
+    padding: 1%;
 }
 
 .footer__contacts-list{
     margin-top: 2vh;
 }
 
-a {
+.footer__contacts__button {
     background-color: #e3a686;
     border-radius: 10px;
     color: black;
@@ -182,14 +205,9 @@ a {
     text-decoration: none;
 }
 
-a:hover {
+.footer__contacts__button:hover {
     background-color: #f5e0c6;
     cursor: pointer;
-}
-
-a:active {
-    box-shadow: none;
-    top: 5px;
 }
 
 @media screen and (max-width: 1000px){
