--- a/css/projects_style.css
+++ b/css/projects_style.css
@@ -50,3 +50,81 @@ body {
     background-color: #f5e0c6;
     cursor: pointer;
 }
+
+.first-project {
+    background-color: #f5e0c6;
+    border-radius: 10px;
+}
+
+.first-project__header {
+    font-size: 2rem;
+    padding-left: 1%;
+    color: black;
+    text-decoration-line: underline;
+}
+
+.first-project__text {
+    display: flex;
+    flex-direction: column;
+    overflow-wrap: break-word;
+    padding-left: 1%
+}
+
+.first-project__image {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.first-project__image__first-image {
+    width: 20vw;
+    height: 50%;
+    border-radius: 10px;
+    border: 5px solid #e3ac8d;
+    box-shadow: 2px 1px 5px #999999;
+    margin-bottom: 5%;
+}
+
+.second-project {
+    background-color: #f5e0c6;
+    border-radius: 10px;
+}
+
+.second-project__header {
+    font-size: 2rem;
+    padding-left: 1%;
+    color: black;
+    text-decoration-line: underline;
+}
+
+.second-project__text {
+    display: flex;
+    flex-direction: column;
+    overflow-wrap: break-word;
+    padding-left: 1%
+}
+
+.second-project__images {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin-bottom: 10%;
+}
+
+.second-project__images__first-image {
+    width: 20vw;
+    height: 50%;
+    border-radius: 10px;
+    border: 5px solid #e3ac8d;
+    box-shadow: 2px 1px 5px #999999;
+}
+
+.second-project__images__second-image {
+    width: 20vw;
+    height: 50%;
+    border-radius: 10px;
+    border: 5px solid #e3ac8d;
+    box-shadow: 2px 1px 5px #999999;
+}
